--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,27 @@
 <%- include('partials/header') %> 
 
-<h1>Login</h1>
+<form>
+  <h2>Login</h2>
+  <label for="email">Email</label>
+  <input type="text" name="email">
+  <div class="error email"></div>
+  <label for="password">Password</label>
+  <input type="password" name="password">
+  <div class="error password"></div>
+  <button>Login</button>
+</form>
+
+<script>
+  const form = document.querySelector('form');
+
+  form.addEventListener('submit', function(e){
+    e.preventDefault();
+
+    //get input values
+    const email = form.email.value;
+    const password = form.password.value;
+    console.log(email, password);
+  });
+</script>
 
 <%- include('partials/footer') %> 
