--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,13 +14,22 @@
 <script>
   const form = document.querySelector('form');
 
-  form.addEventListener('submit', function(e){
+  form.addEventListener('submit', async function(e){
     e.preventDefault();
 
     //get input values
     const email = form.email.value;
     const password = form.password.value;
-    console.log(email, password);
+    
+    try{
+      const response = fetch('/signup', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({email, password})
+      })
+    }catch(error){
+
+    }
   });
 </script>
 <%- include('partials/footer') %> 
