--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,14 +13,40 @@
 
 <script>
   const form = document.querySelector('form');
-
-  form.addEventListener('submit', function(e){
+  const emailError = document.querySelector('.error.email');
+  const passwordError = document.querySelector('.error.password');
+  
+  form.addEventListener('submit', async function(e){
     e.preventDefault();
+
+    //reset errors message
+      emailError.textContent = '';
+      passwordError.textContent = '';
 
     //get input values
     const email = form.email.value;
     const password = form.password.value;
-    console.log(email, password);
+    
+    try{
+
+      const res = await fetch('/login', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({email, password})
+      })
+      const data = await res.json();
+      console.log(data);
+      if(data.errors){
+        emailError.textContent = data.errors.email;
+        passwordError.textContent = data.errors.password;
+      }
+      if(data.user){
+        location.assign('/');
+      }
+
+    }catch(error){
+
+    }
   });
 </script>
 
